chore: sync project and JDK version