@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.alois-seckar.java</groupId>
     <artifactId>JavaDemos</artifactId>
-    <version>2.0</version>
+    <version>23.0</version>
     <packaging>jar</packaging>
     
     <properties>
@@ -43,6 +43,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
+                    <source>23</source>
+                    <target>23</target>
                     <release>23</release>
                     <compilerArgs>
                         <!-- allows 'preview' features -->
@@ -50,15 +52,6 @@
                         <!-- allows newest 'incubator' features -->
                         <arg>--add-modules=jdk.incubator.vector</arg>
                     </compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
